--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-date-pickers": "^5.0.18",
     "@reduxjs/toolkit": "^1.9.2",
     "dayjs": "^1.11.7",
+    "js-brasil": "^2.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
